force-app/main/default/objects/JBCXM__SponsorTrackingHistory__c/JBCXM__SponsorTrackingHistory__c.object-meta.xml
<CustomObject>
    <label>SponsorTrackingHistory</label>
    <nameField>
        <label>SponsorTrackingHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SponsorTrackingHistory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>