force-app/main/default/objects/JBCXM__SponsorTrackingHistory__c/fields/JBCXM__ChangedAttribute__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ChangedAttribute__c</fullName>
    <label>ChangedAttribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>company</fullName>
            </value>
            <value>
                <fullName>location</fullName>
            </value>
            <value>
                <fullName>title</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>