force-app/main/default/objects/JBCXM__SponsorTrackingHistory__c/fields/JBCXM__NewValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NewValue__c</fullName>
    <label>NewValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>