force-app/main/default/objects/JBCXM__SponsorTrackingHistory__c/fields/JBCXM__OldValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OldValue__c</fullName>
    <label>ContactValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>