force-app/main/default/objects/JBCXM__SponsorTrackingHistory__c/fields/JBCXM__PreviousValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PreviousValue__c</fullName>
    <label>PreviousValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>