force-app/main/default/objects/JBCXM__SponsorTrackingHistory__c/fields/JBCXM__SponsorTracking__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SponsorTracking__c</fullName>
    <label>SponsorTracking</label>
    <referenceTo>JBCXM__SponsorTracking__c</referenceTo>
    <relationshipLabel>SponsorTrackingHistory</relationshipLabel>
    <relationshipName>SponsorTrackingHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>